applications/ghost-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-blog
  labels:
    app: ghost-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-blog
  template:
    metadata:
      name: ghost-blog
      labels:
        app: ghost-blog
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: ghost-blog
        image: docker.decort.tech/decort.tech-infra/applications/docker/ghost-blog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: gitlab-auth
---
apiVersion: v1
kind: Service
metadata:
 name: ghost-blog
 namespace: ghost-blog
spec:
 ports:
 - port: 80
   targetPort: 2368
 selector:
   app: ghost-blog
